; ModuleID = '/home/carl/AnghaBench/openssl/ms/extr_applink.c_app_fsetmod.c'
source_filename = "/home/carl/AnghaBench/openssl/ms/extr_applink.c_app_fsetmod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_O_BINARY = common dso_local global i32 0, align 4
@_O_TEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8)* @app_fsetmod to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @app_fsetmod(i32* %0, i8 signext %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8, align 1
  store i32* %0, i32** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @_fileno(i32* %5)
  %7 = load i8, i8* %4, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp eq i32 %8, 98
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @_O_BINARY, align 4
  br label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @_O_TEXT, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = phi i32 [ %11, %10 ], [ %13, %12 ]
  %16 = call i32 @_setmode(i32 %6, i32 %15)
  ret i32 %16
}

declare dso_local i32 @_setmode(i32, i32) #1

declare dso_local i32 @_fileno(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
